modified:   index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Incident - Request - Password change</p>
-                <p class="masthead-subheading font-weight-light mb-0">By: Cristian Saenz Renteria</p>
+                <p class="masthead-subheading font-weight-light mb-0"></p>
             </div>
         </header>
         <!-- Portfolio Section-->
